--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@
 nav{
     background-color: black;
     color: white;
+    position: absolute;
+    width: 100vw;
 }
 
 ul{
@@ -32,5 +34,5 @@ li:hover{
 
 .home-content{
     margin: 0 15px;
-    margin-top: 100px;
+    padding-top: 100px;
 }
