--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(10, 10, 10);
 }
 
 .body{
@@ -11,7 +12,6 @@
 
 nav{
     background-color: black;
-    color: white;
     position: absolute;
     width: 100vw;
     z-index: 2;
@@ -27,6 +27,7 @@ li{
     padding: 15px 30px;
     cursor: pointer;
     font-size: 20px;
+    color: white;
 }
 
 li:hover{
