--- a/static/css/classes.css
+++ b/static/css/classes.css
@@ -2,10 +2,15 @@
     background-color: white;
 }
 
+.class-content{
+    padding-top: 53px;
+}
+
 .class{
+    box-sizing: border-box;
     display: block;
     width: 100%;
-    height: 40px;
+    height: 70px;
     background-color: maroon;
 
     color: white;
@@ -15,6 +20,10 @@
 
 .class h1, p{
     color: rgb(240, 240, 240);
+}
+
+.class h1{
+    user-select: none;
 }
 
 .class p{
@@ -81,6 +90,20 @@
 }
 
 #wizard{
-    background-color: #000d4f;
+    background-color: #1b1b1b;
     /* background-image: url("https://www.transparenttextures.com/patterns/always-grey.png"); */
+}
+
+#wizard h1{
+    color: grey;
+}
+
+#wizard h1::after{
+    content: 'currently unavailable';
+    position: absolute;
+    right: 50px;
+}
+
+#wizard:hover{
+    opacity: 1;
 }
