--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="javascript/main.js"></script>
     <title>Matthew's Oneshot</title>
 </head>
 <body>
     <div class="body">
        <nav>
            <ul>
-               <li name="home">Home</li>
-               <li name="setting">Setting</li>
-               <li name="races">Races</li>
-               <li name="classes">Classes</li>
+               <a href="/"><li name="home">Home</li></a>
+               <a href="/setting"><li name="setting">Setting</li></a>
+               <a href="/races"><li name="races">Races</li></a>
+               <a href="/classes"><li name="classes">Classes</li></a>
            </ul>
        </nav> 
        <div class="home-content">
