--- a/templates/races.html
+++ b/templates/races.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/races.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/races.css')}}">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="javascript/main.js"></script>
-    <script src="javascript/races.js"></script>
-    <title>Matthew's Oneshot</title>
+    <script src="{{url_for('static', filename='scripts/races.js')}}"></script>
+
+    <title>Character Races</title>
 </head>
 <body>
     <div class="body">
         <nav>
             <ul>
-                <li name="home">Home</li>
-                <li name="setting">Setting</li>
-                <li name="races">Races</li>
-                <li name="classes">Classes</li>
+                <a href="/"><li name="home">Home</li></a>
+                <a href="/setting"><li name="setting">Setting</li></a>
+                <a href="/races"><li name="races">Races</li></a>
+                <a href="/classes"><li name="classes">Classes</li></a>
             </ul>
-        </nav> 
+        </nav>  
         <div class="race-content">
             <div class="race" id="dragonborn">
                 <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/6/340/420/618/636272677995471928.png" alt="">
