--- a/templates/classes.html
+++ b/templates/classes.html
@@ -24,38 +24,51 @@
         <div class="class-content">
             <div class="class" id="barbarian">
                 <h1>Barbarian</h1>
-                <p>Lorem ipsum text</p>
+                <p>Stick with the Player's handbook for this one, because they really don't use magic. If yours for some ungodly reason DOES use magic, please talk to me.</p>
             </div>
             <div class="class" id="bard">
                 <h1>Bard</h1>
-                <p>More lorem ipsum</p>
+                <p>Hailing from universities of acclaim and high standing, a bard can find their calling in a great many things, from prowess with a sword to skill in subterfuge. All find common identity in one particular talent, however - the ability to weave their will into the minds of those around them, alter their emotions and perception - and from that, shape reality itself. This is the magic of the bards, and is learnt only after many years of practice and study. There are many tools a bard might select to accomplish these feats, though most usually choose some kind of musical instrument. Other, more skilled bards may use their own voice, or sometimes even the written word.</p>
+                <p>Due to their extensive training in magic and culture, bards often find favor among nobility and others of high class. Few lord or ladies can be found without one in their employ. Upon graduation, a bard receives documentation of their accomplishment, which may be used as proof of identity and license to use magic in a world where it is seldom trusted, and often illegal.</p>
             </div>
             <div class="class" id="cleric">
                 <h1>Cleric</h1>
+                <p>Sometimes, a priest of the gods, or of a particular god is rewarded for their faith with a kernel of that god's power. Most of the time, these priests understand the gift to be a sign of a higher calling, becoming clerics who travel the land to serve their god's will wherever it might be. Some of these clerics end up joining orders or other formal institutions, whereas others find the path of the wanderer to be more to their liking.</p>
             </div>
             <div class="class" id="druid">
                 <h1>Druid</h1>
+                <p>Ask any common man or woman what they see in a tree, and they might tell you of its potential for firewood; in a rock, its use as a brick; or in water, its knack for quenching thirst. Have them spend a few years among them, however, and they might begin to see what the Druid sees - that all these and more are connected to each other by the many spirits that inhabit them. To the druid, the thing and its spirit are indistingushable from each other, and it is from this inisght that the druid is able to achieve their apparent power - for the spirits have their own desires and aversions, and idiosyncrasies which can be used to the advantage of one who understands them.</p>
+                <p>Whether by knowing the right rituals or the proper gifts to appease them, druids can invite to spirits to intervene, calm them when they are riled, and incite them when the situation calls for it. As a druid increases in their relationship to this community, so too can they learn to manipulate their own spirit as well, taking on the forms of all kinds of beasts of the natural world.</p>
             </div>
             <div class="class" id="fighter">
                 <h1>Fighter</h1>
+                <p>The player's handbook is good for this one too. Basically, melee-only classes stay the same. If magic is introduced in some way, there needs to be an excuse. Work it out with me if you have questions.</p>
             </div>
             <div class="class" id="monk">
                 <h1>Monk</h1>
+                <p>Monks use Ki, which may seem magical, but it really isn't. It's just being <span style="font-style: italic; color: inherit">really</span> physically fit, you know?</p>
             </div>
             <div class="class" id="paladin">
                 <h1>Paladin</h1>
+                <p>Unlike the hordes of knights dedicating themselves to one lord or another, a paladin finds themselves serving a much higher purpose. Among the faithful, they rank as priests, while the orders of their commanders and generals hold the weight of a bishop's. In order to carry out the correct understanding of their god's teachings, most paladins begin their training at a young age. They begin their studies in theology, before moving on to swordsmanship. They refine these skills under the tutlage of an experienced paladin, who helps guide their skills as well as their faith.</p>
+                <p>As a paladin's connection with their god grows, they are permitted some small amount of their god's power, often perceived to the unititated to be simple magic - but as any among the faithful would know, the power was never theirs to begin with.</p>
             </div>
             <div class="class" id="ranger">
                 <h1>Ranger</h1>
+                <p>Rooty-tooty-pointy-shooty</p>
             </div>
             <div class="class" id="rogue">
                 <h1>Rogue</h1>
+                <p>One sneaky boi</p>
             </div>
             <div class="class" id="sorcerer">
                 <h1>Sorcerer</h1>
+                <p>Frequently confused for warlocks, sorcerers tend to fall victim to many of the same prejudices and assumptions surrounding their fellow magic-wielders. However they obtained their powers, however, it remains clear that a sorcerers mastery over them is not something they readily understand themselves, instead operating mostly on feeling and instinct.</p>
             </div>
             <div class="class" id="warlock">
                 <h1>Warlock</h1>
+                <p>The warlock is usually distrusted and treated with disdain, as the common perception is that they get their powers from making deals with powers that would oppose the gods. The truth, however, can sometimes be a lot more complicated - a god in one religion might be just as easily considered a demon in another. This complicated relationship with public perception leads most warlocks to operate beyond prying eyes, lest they find themselves confronted by an angry mob or the hangman's noose.</p>
+                <p>Most magic wielders without documentation are often assumed to be warlocks.</p>
             </div>
             <div class="class" id="wizard">
                 <h1>Wizard</h1>
