--- a/static/css/classes.css
+++ b/static/css/classes.css
@@ -16,6 +16,7 @@
     color: white;
     padding: 15px;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .class h1, p{
@@ -24,10 +25,23 @@
 
 .class h1{
     user-select: none;
+    opacity: 0.75;
+    font-style: italic;
+    margin-bottom: 20px;
 }
 
 .class p{
-    padding: 20px 3px 10px;
+    padding: 0 3px 10px;
+    cursor: initial;
+    line-height: 23px;
+}
+
+.class p:first-of-type::first-letter{
+    font-size: 50px;
+    float: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 46px;
+    padding-right: 5px;
 }
 
 .class:hover{
@@ -91,6 +105,7 @@
 
 #wizard{
     background-color: #1b1b1b;
+    cursor: default;
     /* background-image: url("https://www.transparenttextures.com/patterns/always-grey.png"); */
 }
 
