--- a/static/css/races.css
+++ b/static/css/races.css
@@ -101,18 +101,26 @@
 .race-description{
     display: inline-block;
     vertical-align: top;
-    margin-left: 50px
+    margin-left: 50px;
+    max-width: 1000px;
 }
 
 .race-description h1{
     font-size: 50px;
     padding-bottom: 10px;
-    /* border-bottom: 2px solid black;
-    border-right: 20px solid black; */
+    margin-bottom: 50px;
 }
 
 .race-description p{
-    margin-top: 50px;
+    line-height: 23px;
+}
+
+.race-description p:first-of-type::first-letter{
+    font-size: 50px;
+    float: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 46px;
+    padding-right: 5px;
 }
 
 .close{
