--- a/templates/classes.html
+++ b/templates/classes.html
@@ -18,7 +18,7 @@
                 <a href="/"><li name="home">Home</li></a>
                 <a href="/setting"><li name="setting">Setting</li></a>
                 <a href="/races"><li name="races">Races</li></a>
-                <a href="/classes"><li name="classes">Classes</li></a>
+                <a href="/classes"><li name="classes" class="current">Classes</li></a>
             </ul>
         </nav> 
         <div class="class-content">
