--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div class="body">
        <nav>
            <ul>
-               <a href="/"><li name="home">Home</li></a>
+               <a href="/"><li name="home" class="current">Home</li></a>
                <a href="/setting"><li name="setting">Setting</li></a>
                <a href="/races"><li name="races">Races</li></a>
                <a href="/classes"><li name="classes">Classes</li></a>
