--- a/templates/races.html
+++ b/templates/races.html
@@ -18,7 +18,7 @@
             <ul>
                 <a href="/"><li name="home">Home</li></a>
                 <a href="/setting"><li name="setting">Setting</li></a>
-                <a href="/races"><li name="races">Races</li></a>
+                <a href="/races"><li name="races" class="current">Races</li></a>
                 <a href="/classes"><li name="classes">Classes</li></a>
             </ul>
         </nav>  
