--- a/templates/setting.html
+++ b/templates/setting.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <a href="/"><li name="home">Home</li></a>
-                <a href="/setting"><li name="setting">Setting</li></a>
+                <a href="/setting"><li name="setting" class="current">Setting</li></a>
                 <a href="/races"><li name="races">Races</li></a>
                 <a href="/classes"><li name="classes">Classes</li></a>
             </ul>
