--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: tan;
+    background-color: rgb(44, 54, 27);
     height: 100vh;
 }
 
@@ -45,10 +45,16 @@ li:hover{
 }
 
 .home-content{
-    margin: 0 15px;
-    padding-top: 100px;
+    box-sizing: border-box;
+    width: 1200px;
+    height: 100vh;
+    padding: 100px 0 0 0;
+    margin: 0 auto;
+    background-color: tan;
 }
 
-p{
-    
+.home-content p{
+    margin: 20px 50px;
+    font-size: 20px;
+    line-height: 30px;
 }
