--- a/templates/classes.html
+++ b/templates/classes.html
@@ -9,7 +9,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{{url_for('static', filename='scripts/classes.js')}}"></script>
-    <title>Character Classes</title>
+    <title>Oneshot - Classes</title>
 </head>
 <body>
     <div class="body">
