--- a/templates/races.html
+++ b/templates/races.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{{url_for('static', filename='scripts/races.js')}}"></script>
 
-    <title>Character Races</title>
+    <title>Oneshot - Races</title>
 </head>
 <body>
     <div class="body">
