--- a/templates/setting.html
+++ b/templates/setting.html
@@ -10,7 +10,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{{url_for('static', filename='scripts/setting.js')}}"></script>
-    <title>Setting</title>
+    <title>Oneshot - Setting</title>
 </head>
 <body>
     <div class="body">
