--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>Matthew's Oneshot</title>
+    <link href='https://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet'>
+
+    <title>Oneshot - Home</title>
 </head>
 <body>
     <div class="body">
@@ -19,7 +20,8 @@
            </ul>
        </nav> 
        <div class="home-content">
-           <p>This is homepage content. Lorem ipsum dolor sit amet lmao hordy jones! What did you just say about me you little bitch I'll have you know I graduated at the top of my class have you heard the tragedy of darth plaguise the wise of course not it is not a story the jedi would tell you. Gold Roger, King of the Pirates once had everythign the world had to offer. Before his death he did something that I can't remember. You want me treasure? You can have it. All you have to do is find it. This started the great pirate era.</p>
+           <p>Welcome to the home page for our Dungeons and Dragons one-shot, courtesy of Matthew Wiltzius. To get started, simply select any of the above links to arrive at the page of your choice.</p>
+           <p>If you have any questions, you can contact Matthew via facebook or his cellphone. Enjoy your stay!</p>
        </div>
     </div>
 </body>
